# OptiTrackRESTServer

./: .gitignore  CMakeLists.txt  README.md  config.json  start_admin.bat
include/: KalmanFilter.h  MarkerPositionCollection.h  NATUtils.h  NNClient.h  RigidBodyCollection.h  kalman_filter.h  shared.h
lib/NatNetSDK/include/: NatNetCAPI.h  NatNetClient.h  NatNetTypes.h
src/: KalmanFilter.cpp  MarkerPositionCollection.cpp  NATUtils.cpp  NatNetClient.cpp  RigidBodyCollection.cpp  main.cpp
